--- a/index.html
+++ b/index.html
@@ -1,11 +1,90 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uz">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple Watch</title>
+
+
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="css/necolas.github.io_normalize.css_8.0.1_normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
+    <!-- HEADER -->
+    <header class="site-header">
+        <div class="container blog-container">
+            <a class="site-logo" href="#">
+                <img class="site-logo" src="img/apple-logo.svg" alt="Apple Watch logo" width="35" height="42">
+            </a>
+            <div class="site-header-right">
+                <div class="site-header-main">
+                    <nav class="sitenav">
+                        <ul class="sitenav-list">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Offers</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Services</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class=site-help-section>
+                        <a class="site-help-section-link" href="#">How can we help you?</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+
+    <!-- HERO -->
+    <div class="hero">
+        <div class="container hero-container">
+            <div class="hero-left">
+                <h1 class="hero-heading">Freedom calls.</h1>
+                <p class="hero-text">Answer a call from your surfboard. Ask Siri to send a message. Stream your favorite songs on your run. And do it all while leaving your phone behind. Introducing Apple Watch Series 3 with cellular. Now you have the freedom to go with just your watch.</p>
+                <button class="button" type="submit">Watch the keynote</button>
+            </div>
+            <div class="hero-right">
+                <img class="hero-right-img" src="img/intro-bg.jpg" alt="Apple watch" width="387" height="530" srcset="img/intro-bg.jpg 1x, img/intro-bg@2x.jpg 2x">
+            </div>
+        </div>
+    </div>
+
+    <div class="features">
+        <div class="container">
+            <ul class="features-list">
+                <li class="features-item">
+                    <h3 class="features-item-title">Know your runs. In and out.</h3>
+                    <p class="features-item-text">Train smarter with more in-run stats. Want to compare a run to your last five? Just swipe left. Mark splits by selecting pause or using gestures, like tapping the screen or double-clicking the side button. And get a full post-run report, including elevation.</p>
+                </li>
+                <li class="features-item">
+                    <h3 class="features-item-title">Run in good spirits.</h3>
+                    <p class="features-item-text">A little support can go a long way. You can receive encouraging emoji from friends. And reminders triggered by your friends’ shared activity, the current weather, or your own history give you every reason to run.</p>
+                </li>
+                <li class="features-item">
+                    <h3 class="features-item-title">Just do it. Sunday.</h3>
+                    <p class="features-item-text">Run every Sunday and see how long you can keep your streak alive. Fuel your run with exclusive Nike+ Run Club playlists on Apple Music.</p>
+                    <div class="features-information">
+                        <hr class="features-information-line">
+                        <a class="features-information-link" href="#">Learn more</a>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
