Prefix and minify CSS

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/necolas.github.io_normalize.css_8.0.1_normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/necolas.github.io_normalize.css_8.0.1_normalize.css"> -->
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
 
@@ -51,7 +52,7 @@
 
 
     <!-- HERO -->
-    <div class="hero">
+    <section class="hero">
         <div class="container hero-container">
             <div class="hero-left">
                 <h1 class="hero-heading">Freedom calls.</h1>
@@ -62,9 +63,9 @@
                 <img class="hero-right-img" src="img/intro-bg.jpg" alt="Apple watch" width="387" height="530" srcset="img/intro-bg.jpg 1x, img/intro-bg@2x.jpg 2x">
             </div>
         </div>
-    </div>
+    </section>
 
-    <div class="features">
+    <section class="features">
         <div class="container">
             <ul class="features-list">
                 <li class="features-item">
@@ -85,6 +86,36 @@
                 </li>
             </ul>
         </div>
-    </div>
+    </section>
+
+
+    <!-- PROMO -->
+    <section class="hero promo">
+        <div class="container hero-container promo-blog">
+            <div class="hero-left">
+                <h1 class="hero-heading">Nike Sport Band. <br>
+                    Light. Flexible. <br>
+                    Breathable.</h1>
+                <p class="hero-text">Made from the same durable, lightweight fluoroelastomer as the original Apple Watch Sport Band, the Nike Sport Band reduces weight and improves ventilation via row after row of compression-molded perforations.</p>
+                <button class="button" type="submit">Buy now</button>
+            </div>
+            <div class="hero-right">
+                <img class="hero-right-img" src="img/watch-in-hand.jpg" alt="Apple watch" width="400" height="600" srcset="img/watch-in-hand.jpg 1x, img/watch-in-hand@2x.jpg 2x">
+            </div>
+        </div>
+    </section>
+
+
+    <!-- RUNNERS -->
+    <section class="runners">
+        <div class="container runners-blog">
+            <div class="">
+                <h1 class="hero-heading">Take control of your <br> health.</h1>
+                <p class="hero-text runners-text">With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help you take your run to the next level. You can even pair your watch wirelessly with compatible gym equipment. And it’s swimproof, so you can take a post-run dip in the pool.</p>
+                <button class="button" type="submit">Explore features</button>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
