Add site header

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Stylesheets -->
-    <!-- <link rel="stylesheet" href="css/necolas.github.io_normalize.css_8.0.1_normalize.css"> -->
-    <!-- <link rel="stylesheet" href="css/style.css"> -->
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/necolas.github.io_normalize.css_8.0.1_normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- <link rel="stylesheet" href="css/style.min.css"> -->
 </head>
 <body>
 
@@ -22,31 +22,27 @@
     <header class="site-header">
         <div class="container blog-container">
             <a class="site-logo" href="#">
-                <img class="site-logo" src="img/apple-logo.svg" alt="Apple Watch logo" width="35" height="42">
+                <img class="site-logo-img" src="img/apple-logo.svg" alt="Apple Watch logo" width="35" height="42">
             </a>
-            <div class="site-header-right">
-                <div class="site-header-main">
-                    <nav class="sitenav">
-                        <ul class="sitenav-list">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Offers</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Services</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div class=site-help-section>
-                        <a class="site-help-section-link" href="#">How can we help you?</a>
-                    </div>
-                </div>
-            </div>
+            <nav class="sitenav">
+                <ul class="sitenav-list">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Offers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Services</a>
+                    </li>
+                </ul>
+            </nav>
+            <form class="search-form" action="https://echo.htmlacademy.ru" method="GET">
+                <input class="search-form-input" type="search" name="search" aria-label="search" placeholder="How can we help you?" required>
+            </form>
         </div>
     </header>
 
