--- a/index.html
+++ b/index.html
@@ -47,19 +47,22 @@
     </header>
 
 
-    <!-- HERO -->
-    <section class="hero">
-        <div class="container hero-container">
-            <div class="hero-left">
-                <h1 class="hero-heading">Freedom calls.</h1>
-                <p class="hero-text">Answer a call from your surfboard. Ask Siri to send a message. Stream your favorite songs on your run. And do it all while leaving your phone behind. Introducing Apple Watch Series 3 with cellular. Now you have the freedom to go with just your watch.</p>
-                <button class="button" type="submit">Watch the keynote</button>
+    <!-- MAIN CONTENT -->
+    <div class="main-content">
+        <!-- HERO -->
+        <section class="hero">
+            <div class="container hero-container">
+                <div class="lead-cta">
+                    <h2 class="lead-cta-heading">Freedom calls.</h2>
+                    <p class="lead-cta-text">Answer a call from your surfboard. Ask Siri to send a message. Stream your favorite
+                        songs on your run. And do it all while leaving your phone behind. Introducing Apple Watch Series 3
+                        with cellular. Now you have the freedom to go with just your watch.</p>
+                    <a class="button" href="#">Watch the keynote</a>
+                </div>
             </div>
-            <div class="hero-right">
-                <img class="hero-right-img" src="img/intro-bg.jpg" alt="Apple watch" width="387" height="530" srcset="img/intro-bg.jpg 1x, img/intro-bg@2x.jpg 2x">
-            </div>
-        </div>
-    </section>
+        </section>
+    </div>
+
 
     <section class="features">
         <div class="container">
@@ -67,18 +70,17 @@
                 <li class="features-item">
                     <h3 class="features-item-title">Know your runs. In and out.</h3>
                     <p class="features-item-text">Train smarter with more in-run stats. Want to compare a run to your last five? Just swipe left. Mark splits by selecting pause or using gestures, like tapping the screen or double-clicking the side button. And get a full post-run report, including elevation.</p>
+                    <hr class="features-divider">
                 </li>
                 <li class="features-item">
                     <h3 class="features-item-title">Run in good spirits.</h3>
                     <p class="features-item-text">A little support can go a long way. You can receive encouraging emoji from friends. And reminders triggered by your friends’ shared activity, the current weather, or your own history give you every reason to run.</p>
+                    <hr class="features-divider">
                 </li>
                 <li class="features-item">
                     <h3 class="features-item-title">Just do it. Sunday.</h3>
                     <p class="features-item-text">Run every Sunday and see how long you can keep your streak alive. Fuel your run with exclusive Nike+ Run Club playlists on Apple Music.</p>
-                    <div class="features-information">
-                        <hr class="features-information-line">
-                        <a class="features-information-link" href="#">Learn more</a>
-                    </div>
+                    <a class="lined-link" href="#">Learn more</a>
                 </li>
             </ul>
         </div>
