--- a/index.html
+++ b/index.html
@@ -88,18 +88,18 @@
 
 
     <!-- PROMO -->
-    <section class="hero promo">
-        <div class="container hero-container promo-blog">
-            <div class="hero-left">
-                <h1 class="hero-heading">Nike Sport Band. <br>
+    <section class="promo">
+        <div class="container promo-blog">
+            <div class="lead-cta">
+                <h2 class="lead-cta-heading">Nike Sport Band. <br>
                     Light. Flexible. <br>
-                    Breathable.</h1>
-                <p class="hero-text">Made from the same durable, lightweight fluoroelastomer as the original Apple Watch Sport Band, the Nike Sport Band reduces weight and improves ventilation via row after row of compression-molded perforations.</p>
-                <button class="button" type="submit">Buy now</button>
+                    Breathable.</h2>
+                <p class="lead-cta-text">Made from the same durable, lightweight fluoroelastomer as the original Apple Watch Sport Band, the Nike Sport Band reduces weight and improves ventilation via row after row of compression-molded perforations.</p>
+                <a class="button" href="#">Buy now</a>
             </div>
-            <div class="hero-right">
-                <img class="hero-right-img" src="img/watch-in-hand.jpg" alt="Apple watch" width="400" height="600" srcset="img/watch-in-hand.jpg 1x, img/watch-in-hand@2x.jpg 2x">
-            </div>
+
+            <img class="promo-lead-cta-img" src="img/watch-in-hand.jpg" alt="Apple watch" width="400" height="600" srcset="img/watch-in-hand.jpg 1x, img/watch-in-hand@2x.jpg 2x">
+
         </div>
     </section>
 
@@ -107,10 +107,10 @@
     <!-- RUNNERS -->
     <section class="runners">
         <div class="container runners-blog">
-            <div class="">
-                <h1 class="hero-heading">Take control of your <br> health.</h1>
-                <p class="hero-text runners-text">With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help you take your run to the next level. You can even pair your watch wirelessly with compatible gym equipment. And it’s swimproof, so you can take a post-run dip in the pool.</p>
-                <button class="button" type="submit">Explore features</button>
+            <div class="runners-lead-cta lead-cta lead-cta--white">
+                <h2 class="lead-cta-heading">Take control of your health.</h2>
+                <p class="lead-cta-text">With built-in GPS and altimeter, Apple Watch Nike+ has all the features to help you take your run to the next level. You can even pair your watch wirelessly with compatible gym equipment. And it’s swimproof, so you can take a post-run dip in the pool.</p>
+                <a class="button" href="#">Explore features</a>
             </div>
         </div>
     </section>
