Add css minifix

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/necolas.github.io_normalize.css_8.0.1_normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-    <!-- <link rel="stylesheet" href="css/style.min.css"> -->
+    <!-- <link rel="stylesheet" href="css/necolas.github.io_normalize.css_8.0.1_normalize.css"> -->
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
 
